[package]
name = "bind-args"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A parser for an alternative (non-GNU/ non-POSIX) style of command line arguments:"
repository = "https://git.sr.ht/~eanyanwu/bind-args"
keywords = ["cli", "arguments", "parsing"]
categories = ["command-line-interface"]

[dependencies]
itertools = "0.13.0"

