[package]
name = "bind-args"
version = "0.4.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A parser for an alternative (non-GNU/ non-POSIX) style of command line arguments:"
repository = "https://github.com/eze-works/bind-args"
keywords = ["cli", "arguments", "parsing"]
categories = ["command-line-interface"]

[dev-dependencies]
anyhow = "1.0.89"

