[package]
name = "bind-args"
version = "0.6.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A command-line argument parser"
repository = "https://github.com/eze-works/bind-args"
keywords = ["cli", "arguments", "parsing"]
categories = ["command-line-interface"]

[dev-dependencies]
anyhow = "1.0.89"

